--- a/demo/src/main/resources/com/example/demo/view.fxml
+++ b/demo/src/main/resources/com/example/demo/view.fxml
@@ -10,7 +10,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
    <center>
-      <VBox alignment="CENTER" prefHeight="605.0" prefWidth="745.0" spacing="20.0">
+      <VBox alignment="CENTER" onDragDetected="#settings" prefHeight="605.0" prefWidth="745.0" spacing="20.0">
           <padding>
               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
           </padding>
@@ -24,7 +24,7 @@
                <Insets />
             </opaqueInsets>
          </Button>
-         <Button mnemonicParsing="false" onAction="#switchToNetAndCom" text="Network &amp; Comunication test">
+         <Button mnemonicParsing="false" onAction="#settings" text="Settings " textAlignment="CENTER">
             <VBox.margin>
                <Insets top="50.0" />
             </VBox.margin>
