--- a/demo/src/main/resources/com/example/demo/view.fxml
+++ b/demo/src/main/resources/com/example/demo/view.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+<BorderPane xmlns="http://javafx.com/javafx/19"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.demo.Controller">
    <center>
       <VBox alignment="CENTER" onDragDetected="#settings" prefHeight="605.0" prefWidth="745.0" spacing="20.0">
           <padding>
