--- a/demo/src/main/resources/view/Play-Local.fxml
+++ b/demo/src/main/resources/view/Play-Local.fxml
@@ -10,7 +10,7 @@
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
             xmlns="http://javafx.com/javafx/19"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.demo.Controller">
+            fx:controller="view.Controller">
    <center>
       <MenuButton mnemonicParsing="false" text="Players" BorderPane.alignment="CENTER">
         <items>
